# nv-pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
.github/workflows/: pytest.yaml
pre_commit_hooks/: detect_nv_keys.py  test_detect_nv_keys.py
