[metadata]
name = nv_pre_commit_hooks
version = 4.6.0
description = Pre-commit hooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tuttlebr/nv-pre-commit
author = Brandon Tuttle
author_email = btuttle@nvidia.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    detect-nv-keys = pre_commit_hooks.detect_nv_keys:main
